# TRUGS-WEB

./: .gitignore  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  STATE_OF_REPO.md  example.trug.json  folder.trug.json  pyproject.toml
.github/workflows/: ci.yml
deferred_phase2/hub/: __init__.py  cross_trug_edges.py  hub_agent.py  orchestrate.py  qualifying_interest.py
deferred_phase2/refresh/: __init__.py  diff.py  persistent_query.py
deferred_phase2/tests/: test_web_hub_agent.py  test_web_hub_cross_trug_edges.py  test_web_hub_orchestrate.py  test_web_hub_qualifying_interest.py  test_web_refresh_diff.py  test_web_refresh_persistent_query.py
src/trugs_web/: __init__.py  _safety.py  cli.py  crawler.py  credibility.py  extractor.py  graph_builder.py  resolver.py
src/trugs_web/query/: __init__.py  loader.py  synthesize.py  traverse.py
src/trugs_web/weight/: __init__.py  topology.py
tests/: conftest.py  test_web_cli.py  test_web_crawler.py  test_web_credibility.py  test_web_extractor.py  test_web_graph_builder.py  test_web_graph_validation_e2e.py  test_web_query_integration.py  test_web_query_loader.py  test_web_query_synthesize.py  test_web_query_traverse.py  test_web_resolver.py  test_web_safety_rails.py  test_web_weight_topology.py
