[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trugs-web"
version = "2.0.0"
description = "TRUGS web research tool — crawl web sources and build passive TRUGS knowledge graphs. One-way and passive: it builds graphs, it never closes the self-developing loop. Single `trugs-web` binary."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "TRUGS LLC" }]
keywords = ["trugs", "web", "crawler", "knowledge-graph", "research", "cli"]
classifiers = [
    # 2.0 launches as Beta (parity with trugs-folder / trugs-tools).
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
# T2 sits ABOVE T1: depends on the language core (trugs-tools) + the graph store
# (trugs-store). It NEVER depends on any T3 system package (the AAA #2358 cleave invariant).
dependencies = [
    "trugs-tools>=2.0.0",
    "trugs-store>=2.0.0",
]

[project.optional-dependencies]
web = ["httpx>=0.24", "beautifulsoup4>=4.9", "lxml>=4.9"]
llm = ["anthropic>=0.7", "openai>=1.0"]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.20",
    "respx>=0.20",
    "httpx>=0.24",
    "beautifulsoup4>=4.9",
]

[project.scripts]
trugs-web = "trugs_web.cli:main"

[project.urls]
Homepage = "https://github.com/TRUGS-LLC/TRUGS-WEB"
Issues = "https://github.com/TRUGS-LLC/TRUGS-WEB/issues"
Documentation = "https://github.com/TRUGS-LLC/TRUGS-WEB/blob/main/ARCHITECTURE.md"
Changelog = "https://github.com/TRUGS-LLC/TRUGS-WEB/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE", "NOTICE"]   # dists carry the Apache license + patent NOTICE

[tool.setuptools.packages.find]
where = ["src"]
include = ["trugs_web*"]   # excludes deferred_phase2/ (hub, refresh) from the v1 wheel

[tool.pytest.ini_options]
testpaths = ["tests"]      # v1 test suite only; deferred_phase2/tests held for Phase 2
markers = [
    "robots: crawler robots.txt / politeness behavior (SP4)",
    "rate_limit: crawler rate-limit / backoff behavior (SP4)",
    "cost: LLM cost-guard / budget behavior (SP4)",
    "secret: API-key-from-environment behavior (SP4)",
    "logging: structured logging / error-context behavior (SP4)",
    "graph_validation_e2e: end-to-end TRUG build + validate_trug() check (SP2)",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]   # tests may import after module-level setup

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["trugs_store", "trugs_store.*", "trugs_tools", "trugs_tools.*", "httpx", "bs4", "anthropic", "openai", "respx"]
ignore_missing_imports = true
